Implement restart-safe Scheduler v1 (#160)
